--- a/webdesign.html
+++ b/webdesign.html
@@ -112,14 +112,14 @@
                 </div>
             </div><!-- End: 1 Row 3 Columns -->
             <!-- Start: Projects Clean -->
-            <section class="projects-clean">
+            <section class="text-center d-lg-flex justify-content-lg-center projects-clean">
                 <div class="container">
                     <!-- Start: Intro -->
                     <div class="intro">
                         <h2 class="text-center">Our Team's Featured Projects</h2>
                     </div><!-- End: Intro -->
                     <!-- Start: Projects -->
-                    <div class="row projects" style="text-align: center;">
+                    <div class="row d-lg-flex justify-content-lg-center projects" style="text-align: center;">
                         <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="https://scholar.wavedm.net/media/banner.jpg">
                             <h3 class="name">Wave Digital Ministries</h3>
                             <p class="description">Our team developed and has been managing all of the Wave Digital Ministries websites since 2019.</p><a href="https://www.wavedm.net/" target="_blank">Check out the sites</a>
@@ -130,7 +130,7 @@
                         </div>
                     </div><!-- End: Projects -->
                     <!-- Start: Projects -->
-                    <div class="row projects" style="text-align: center;">
+                    <div class="row d-lg-flex justify-content-lg-center projects" style="text-align: center;">
                         <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/bcss.jpg">
                             <h3 class="name">BCS Social (Beta)</h3>
                             <p class="description">BCS Social is an advanced static site designed as a social broadcasting platform. The project is still in beta.</p><a href="https://www.bcssocial.net/" target="_blank">Check out the site</a>
