--- a/page12.html
+++ b/page12.html
@@ -10,9 +10,9 @@
     <meta name="twitter:title" content="Borg Creative Studios">
     <meta property="og:type" content="website">
     <meta name="twitter:description" content="Our team develops software, produces video games, and creates digital media resources.">
-    <meta property="og:image" content="assets/img/bcs-marketing.png">
-    <meta name="description" content="Privacy-friendly marketing">
-    <meta name="twitter:image" content="assets/img/bcs-marketing.png">
+    <meta name="twitter:image" content="assets/img/BCS%20Marketing%20wbg.jpg">
+    <meta name="description" content="Reach the Galaxy. Low-cost, privacy respecting marketing">
+    <meta property="og:image" content="assets/img/BCS%20Marketing%20wbg.jpg">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -68,9 +68,9 @@
     </nav>
     <main class="page landing-page">
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);">
-            <div class="text">
+            <div class="text"><img src="assets/img/BCS%20Marketing%20nobg.png" style="width: 200px;">
                 <h1>BCS Marketing</h1>
-                <p>Reach communities, not just individuals.</p>
+                <p>Reach the galaxy</p>
             </div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
