--- a/privacygalaxy.html
+++ b/privacygalaxy.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>BCS Marketing</title>
+    <title>BCS Privacy Galaxy</title>
     <meta name="theme-color" content="#fff">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Borg Creative Studios">
     <meta property="og:type" content="website">
     <meta name="twitter:description" content="Our team develops software, produces video games, and creates digital media resources.">
-    <meta name="twitter:image" content="assets/img/BCS%20Marketing%20wbg.jpg">
-    <meta name="description" content="Reach the Galaxy. Low-cost, privacy respecting marketing">
     <meta property="og:image" content="assets/img/BCS%20Marketing%20wbg.jpg">
+    <meta name="twitter:image" content="assets/img/BCS%20Marketing%20wbg.jpg">
+    <meta name="description" content="A galaxy of privacy-friendly products.">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
