--- a/page12.html
+++ b/page12.html
@@ -97,9 +97,9 @@
                                 <h3>Where are ads distributed?</h3>
                                 <p>We distribute your ads to blogs, news sites, software sites, social media affiliates, and more.</p>
                             </div>
-                            <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/check.png" style="width: 100%;">
-                                <h3>How are ads moderated?</h3>
-                                <p>All ads are inspected prior to launching in order to verify that they meet our content&nbsp;guidelines.</p>
+                            <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/business.png" style="width: 100%;">
+                                <h3>How much does it cost?</h3>
+                                <p>Ads posted onto our platform cost just $10 for a week long ad! All clicks are included!</p>
                             </div>
                             <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 100%;">
                                 <h3>How is advertising data managed?</h3>
