--- a/page12.html
+++ b/page12.html
@@ -88,6 +88,7 @@
                                 <div class="intro">
                                     <h2>What is BCS Marketing?</h2>
                                     <p>BCS Marketing is a flat-rate, privacy-oriented marketing platform.</p>
+                                    <p><a href="https://support.borgcreative.com/bcsmarketing/guidelines.html" target="_blank">View the guidelines</a></p>
                                 </div><!-- End: Intro -->
                             </div>
                             <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/contactcard.png" style="width: 100%;"></div>
