--- a/privacygalaxy.html
+++ b/privacygalaxy.html
@@ -70,9 +70,45 @@
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);">
             <div class="text"><img src="assets/img/BCS%20Marketing%20nobg.png" style="width: 200px;">
                 <h1>Privacy Galaxy</h1>
-                <p>A galaxy of privacy-friendly products. </p>
-                <p>Coming soon.</p><!-- Start: Social Icons -->
+                <p>A galaxy of privacy-friendly products. </p><!-- Start: Social Icons -->
                 <div class="social-icons" style="background: rgba(255,255,255,0);padding-top: 0;padding-bottom: 0;"><a href="https://twitter.com/privacygalaxy" target="_blank"><i class="icon ion-social-twitter" style="border-radius: 5px;border-color: rgb(0,218,197);background: #00dac5;color: rgb(255,255,255);"></i></a></div><!-- End: Social Icons -->
+            </div>
+        </section>
+        <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
+            <div class="container">
+                <div class="block-heading">
+                    <h2 class="text-info" style="color: #3d566e;"></h2>
+                    <h1 style="color: #3d566e;"></h1>
+                    <p></p>
+                </div><!-- Start: Highlight Phone -->
+                <section class="highlight-phone" style="background: #f6f6f6;">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <!-- Start: Intro -->
+                                <div class="intro">
+                                    <h2>Launch into a galaxy of digital privacy.</h2>
+                                    <p>We produce several privacy-friendly alternatives to mainstream products.</p>
+                                </div><!-- End: Intro -->
+                            </div>
+                            <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/rocket.png" style="width: 100%;"></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/privacy.png" style="width: 100%;">
+                                <h3>How is</h3>
+                                <p>We distribute your ads to blogs, news sites, software sites, social media affiliates, and more.</p>
+                            </div>
+                            <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/check.png" style="width: 100%;">
+                                <h3>How are ads moderated?</h3>
+                                <p>All ads are inspected prior to launching in order to verify that they meet our content&nbsp;guidelines.</p>
+                            </div>
+                            <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 100%;">
+                                <h3>How is advertising data managed?</h3>
+                                <p>We keep all data secure and private. The small amount of data recorded is done so <a href="page13.html">anonymously</a>!</p>
+                            </div>
+                        </div>
+                    </div>
+                </section><!-- End: Highlight Phone -->
             </div>
         </section>
     </main>
