Added product Hunt button

--- a/page12.html
+++ b/page12.html
@@ -70,7 +70,9 @@
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);">
             <div class="text"><img src="assets/img/BCS%20Marketing%20nobg.png" style="width: 200px;">
                 <h1>BCS Marketing</h1>
-                <p>Reach the galaxy</p>
+                <p>Reach the galaxy</p><center>
+    <a href="https://www.producthunt.com/posts/bcs-marketing-mark-4?utm_source=badge-review&utm_medium=badge&utm_souce=badge-bcs-marketing-mark-4#discussion-body" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/review.svg?post_id=320175&theme=dark" alt="BCS Marketing | Mark 4 - Reach the Galaxy | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+</center>
             </div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
