--- a/privacy.html
+++ b/privacy.html
@@ -68,7 +68,7 @@
     </nav>
     <main class="page landing-page">
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);border-style: none;filter: saturate(100%);background: url(&quot;assets/img/bcs-cover.jpg&quot;) center no-repeat;">
-            <div class="text">
+            <div class="text"><img src="assets/img/privacy.png" style="width: 50%;">
                 <h1>Privacy</h1>
             </div>
         </section>
@@ -78,7 +78,16 @@
                 <section class="highlight-phone" style="background: #f6f6f6;padding: 0px 0px 5px;text-align: left;">
                     <h2></h2>
                     <h1><strong>Privacy Policy for Borg Creative Studios, LLC</strong></h1>
-                    <h5>Effective Date: July 27, 2021</h5>
+                    <h5>Effective Date: November 23, 2021</h5><!-- Start: Feed Post -->
+                    <div class="card" style="margin: 10px;">
+                        <div class="card-header">
+                            <h5 class="mb-0">What's Changed?</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">We no longer utilize FreshWorks and its services. Thus, we have removed them from our third-party service providers.</p>
+                            <p class="card-text">We have also clarified Tally forms. Tally is no longer used on our main website. It is only used now on the BCS Social Premium site.</p>
+                        </div>
+                    </div><!-- End: Feed Post -->
                     <p>At Borg Creative Studios, accessible from https://www.borgcreative.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Borg Creative Studios and how we use it.</p>
                     <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
                     <p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in Borg Creative Studios. This policy is not applicable to any information collected offline or via channels other than this website.</p>
@@ -115,7 +124,7 @@
                     <ul>
                         <li><a href="https://help.tally.so/terms-and-privacy/privacy-policy" target="_blank">Tally<br></a></li>
                     </ul>
-                    <p>Forms (Any information shared in forms may be stored with Tally.)</p>
+                    <p>Forms on BCS Social Premium (Any information shared in forms may be stored with Tally.)</p>
                     <ul>
                         <li><a href="https://docs.github.com/en/github/site-policy/github-privacy-statement" target="_blank">GitHub (GitHub Pages, git)</a></li>
                     </ul>
@@ -124,10 +133,7 @@
                         <li><a href="https://papercups.io/privacy" target="_blank">Papercups<br></a></li>
                     </ul>
                     <p>Web chat. Any information shared in helpdesk or chat communication is stored with Papercups.</p>
-                    <ul>
-                        <li><a href="https://www.freshworks.com/privacy/" target="_blank">Freshworks (Fresh Desk, Fresh Chat)</a></li>
-                    </ul>
-                    <p>Helpdesk, knowledge base, and web chat. Any information shared in helpdesk or chat communication is stored with FreshWorks.</p>
+                    <ul></ul>
                     <p>Borg Creative Studios's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party services for more detailed information. It may include their practices and instructions about how to opt-out of certain options.</p>
                     <p>You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites.</p>
                     <h4>CCPA Privacy Rights (Do Not Sell My Personal Information)</h4>
@@ -152,7 +158,7 @@
                     <p>Upon request, we will delete any and all known data associated with you. Data that is collected anonymously will not be deleted.</p>
                     <p>Email&nbsp;data@mail.borgcreative.com&nbsp;to request your data to be deleted or complete the below form.</p><div>
 
-    <iframe src="https://tally.so/embed/nrOqMm?hideTitle=1&transparentBackground=1" width="100%" height="500"
+    <iframe src="https://cloud.borgcreative.com/survey/index.php/388653?newtest=Y&lang=en" width="100%" height="500"
         frameborder="0" marginheight="0" marginwidth="0" title="Delete My Data"></iframe>
 
 </div><!-- Start: Contact Form Clean -->
