Cyber Week update

--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
     </nav>
     <main class="page landing-page" style="background: linear-gradient(#1F1E2C, #1A1A1A);">
         <section>
+            <!-- Start: Welcome banner -->
+            <div style="padding-top: 30px;background: url(&quot;https://images.unsplash.com/photo-1573767291321-c0af2eaf5266?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1072&amp;q=80&quot;) center / cover;">
+                <div class="text-center">
+                    <h2 class="text-white">Cyber Monday deals all week long!</h2>
+                    <h6 class="text-white">So you could say it's Cyber Week.</h6><img src="assets/img/IMG_1547.png" style="min-width: 250px;max-width: 70%;opacity: 0;" width="30%">
+                </div>
+            </div><!-- End: Welcome banner -->
             <!-- Start: web design -->
             <div style="padding-top: 30px;">
                 <div class="text-center">
