--- a/page12.html
+++ b/page12.html
@@ -110,6 +110,18 @@
                                 <p>We keep all data secure and private. The small amount of data recorded is done so <a href="page13.html">anonymously</a>!</p>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-md-4" style="width: 100%;">
+                                <h3>Features</h3>
+                                <ul>
+                                    <li>Item 1</li>
+                                    <li>Item 2</li>
+                                    <li>Item 3</li>
+                                    <li>Item 4</li>
+                                </ul>
+                                <p>We keep all data secure and private. The small amount of data recorded is done so <a href="page13.html">anonymously</a>!</p>
+                            </div>
+                        </div>
                     </div>
                 </section><!-- End: Highlight Phone -->
             </div><!-- Start: Contact Form Clean -->
