--- a/cloud.html
+++ b/cloud.html
@@ -114,7 +114,7 @@
             <!-- Start: 1 Row 2 Columns -->
             <div class="container" style="margin-top: 20px;">
                 <div class="row">
-                    <div class="col"><a class="btn btn-dark btn-lg" role="button" href="https://cloud.borgcreative.com/my/index.php/apps/forms/c34pxD5ratTfNRwd" target="_blank">Apply for Account</a></div>
+                    <div class="col"><a class="btn btn-dark btn-lg" role="button" href="https://cloud.borgcreative.com/my/" target="_blank">Setup an Account</a></div>
                 </div>
             </div><!-- End: 1 Row 2 Columns -->
             <p>Please read the terms and conditions before use. By signing up for BCS Cloud, you automatically agree to the terms, conditions, and privacy policy.</p>
