--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <main class="page landing-page" style="background: linear-gradient(#1F1E2C, #1A1A1A);">
         <section>
             <!-- Start: cloud -->
-            <div style="padding-top: 30px;background: url(&quot;assets/img/cyberspace.png&quot;);">
+            <div style="padding-top: 30px;background: url(&quot;assets/img/cyberspace.png&quot;) center;">
                 <div class="text-center">
                     <h2 class="text-white" style="text-shadow: 0px 0px 4px rgb(0,0,0);">BCS Cloud - Beta</h2>
                     <p class="text-white" style="text-shadow: 0px 0px 4px rgb(0,0,0);">Chat | Analytics | Privacy</p>
