--- a/index.html
+++ b/index.html
@@ -69,14 +69,22 @@
     </nav>
     <main class="page landing-page" style="background: linear-gradient(#1F1E2C, #1A1A1A);">
         <section>
-            <!-- Start: cloud -->
-            <div style="padding-top: 30px;background: url(&quot;assets/img/cyberspace.png&quot;) center;">
+            <!-- Start: web design -->
+            <div style="padding-top: 30px;">
                 <div class="text-center">
-                    <h2 class="text-white" style="text-shadow: 0px 0px 4px rgb(0,0,0);">BCS Cloud - Beta</h2>
-                    <p class="text-white" style="text-shadow: 0px 0px 4px rgb(0,0,0);">Chat | Analytics | Privacy</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="cloud.html" style="text-shadow: 0px 0px 4px rgb(0,0,0);">learn more</a></p><img src="assets/img/webdesign2.png" style="min-width: 250px;max-width: 70%;opacity: 0;">
+                    <h2 class="text-white">BCS Cloud - Beta</h2>
+                    <p class="text-white">Privacy-friendly cloud services for you and your business</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="cloud.html">learn more</a></p><img src="assets/img/cloudpromo1.png" style="min-width: 250px;max-width: 70%;">
                 </div>
-            </div><!-- End: cloud -->
+            </div><!-- End: web design -->
+            <!-- Start: Fruity -->
+            <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
+                <div class="text-center">
+                    <h2>Fruity Web Browser</h2>
+                    <p>Minimalist web browsing for MacOS.</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="fruity.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/fruity-pineapple-promo1.png" style="min-width: 250px;max-width: 70%;">
+                </div>
+            </div><!-- End: Fruity -->
             <!-- Start: web design -->
             <div style="padding-top: 30px;">
                 <div class="text-center">
@@ -88,22 +96,6 @@
             <!-- Start: Fruity -->
             <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
                 <div class="text-center">
-                    <h2>Fruity Web Browser</h2>
-                    <p>Minimalist web browsing for MacOS.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="fruity.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/fruity-pineapple-promo1.png" style="min-width: 250px;max-width: 70%;">
-                </div>
-            </div><!-- End: Fruity -->
-            <!-- Start: Marketing -->
-            <div style="padding-top: 30px;">
-                <div class="text-center">
-                    <h2 style="color: rgb(255,255,255);">BCS Marketing</h2>
-                    <p style="color: rgb(255,255,255);">Privacy by-design flat-rate marketing for anyone.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="page12.html">learn more</a></p><img data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/adad3.png" style="min-width: 250px;max-width: 70%;">
-                </div>
-            </div><!-- End: Marketing -->
-            <!-- Start: Fruity -->
-            <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
-                <div class="text-center">
                     <h2>BCS Lock</h2>
                     <p>A simple password generator for MacOS.</p>
                     <p class="text-white" style="margin-bottom: 0px;"><a href="bcs-lock.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/bcslock.png" style="min-width: 250px;max-width: 70%;">
@@ -112,9 +104,9 @@
             <!-- Start: Marketing -->
             <div style="padding-top: 30px;">
                 <div class="text-center">
-                    <h2 style="color: rgb(255,255,255);">BCS Author</h2>
-                    <p style="color: rgb(255,255,255);">A new, browser-based text editor.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="https://author.borgcreative.com" target="_blank">learn more</a></p><img data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/bcsauthorpromo.png" style="min-width: 250px;max-width: 70%;padding-top: -20px;margin: 0px;margin-top: 0px;">
+                    <h2 style="color: rgb(255,255,255);">BCS Marketing</h2>
+                    <p style="color: rgb(255,255,255);">Privacy by-design flat-rate marketing for anyone.</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="page12.html">learn more</a></p><img data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/adad3.png" style="min-width: 250px;max-width: 70%;">
                 </div>
             </div><!-- End: Marketing -->
             <!-- Start: more -->
