--- a/cloud.html
+++ b/cloud.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Fruity</title>
+    <title>BCS Cloud</title>
     <meta name="theme-color" content="#fff">
-    <meta property="og:image" content="assets/img/BCS_twitter.jpg">
     <meta property="og:type" content="website">
-    <meta name="twitter:image" content="assets/img/fruitybanner.jpg">
-    <meta name="description" content="The Fruity web browser for MacOS.">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Fruity">
-    <meta name="twitter:description" content="A privacy-friendly, minimalist web browser for MacOS.">
+    <meta name="twitter:title" content="BCS Cloud">
+    <meta name="twitter:image" content="assets/img/cloudpromo4.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="description" content="Privacy-friendly cloud services">
+    <meta property="og:image" content="assets/img/cloudpromo4.jpg">
+    <meta name="twitter:description" content="Privacy-friendly cloud services">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
