Updated Fruity page

--- a/fruity.html
+++ b/fruity.html
@@ -70,7 +70,9 @@
     <main class="page landing-page">
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/fruitypromo.png&quot;) center / auto;border-style: none;filter: saturate(100%);">
             <div class="text">
-                <h1>Fruity</h1><!-- Start: gamejolt download button --><a href="https://gamejolt.com/games/fruity/629125" target="_blank"><img src="assets/img/gamejolt-download-button.png" style="width: 200px;"></a><!-- End: gamejolt download button -->
+                <h1>Fruity</h1>
+                <p><a href="https://gamejolt.com/games/fruity/629125" target="_blank"><img src="assets/img/gamejolt-download-button.png" style="width: 200px;"></a></p>
+                <p><a href="https://apps.code4freedom.net/apps/fruity-tangerine.html" target="_blank"> <img width="200px" src="https://apps.code4freedom.net/badge.png"></a></p>
             </div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
@@ -117,7 +119,10 @@
                     <div class="col-md-6 d-md-flex justify-content-md-center align-items-md-center">
                         <!-- Start: gamejolt download button --><a href="https://gamejolt.com/games/fruity/629125" target="_blank"><img src="assets/img/gamejolt-download-button.png" style="width: 200px;"></a><!-- End: gamejolt download button -->
                     </div>
-                    <div class="col-md-6 d-md-flex justify-content-md-center align-items-md-center"><a class="btn btn-dark btn-lg" role="button" href="https://borg-creative-studios.github.io/fruity-website/assets/files/Terms-andConditions-Fruity.pdf" target="_blank">Terms</a></div>
+                    <div class="col-md-6 d-md-flex justify-content-md-center align-items-md-center"><a href="https://apps.code4freedom.net/apps/fruity-tangerine.html" target="_blank"> <img width="200px" src="https://apps.code4freedom.net/badge.png"></a></div>
+                </div>
+                <div class="row">
+                    <div class="col"><a class="btn btn-dark btn-lg" role="button" href="https://borg-creative-studios.github.io/fruity-website/assets/files/Terms-andConditions-Fruity.pdf" target="_blank">Terms</a></div>
                 </div>
             </div><!-- End: 1 Row 2 Columns -->
             <p>Please read the terms and conditions before use. By downloading Fruity, you automatically agree to the terms, conditions, and privacy policy.</p>
