--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="webproducts.html">Web</a></li>
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="services.html">Business</a></li>
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="contact.html">Contact Us</a></li>
-                    <li class="nav-item" style="padding-right: 0px;"><a class="nav-link" href="http://shop.borgcreative.com/" target="_blank" style="padding-right: 16px;">merch</a></li>
                     <li class="nav-item" style="padding-right: 0px;"><a class="nav-link" href="https://cloud.borgcreative.com/" target="_blank">Login<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" style="width: 20px;height: 20px;">
                                 <path d="M16 7C16 9.20914 14.2091 11 12 11C9.79086 11 8 9.20914 8 7C8 4.79086 9.79086 3 12 3C14.2091 3 16 4.79086 16 7Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                                 <path d="M12 14C8.13401 14 5 17.134 5 21H19C19 17.134 15.866 14 12 14Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -94,37 +93,29 @@
                 </div>
             </div><!-- End: web design -->
             <!-- Start: Fruity -->
-            <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
-                <div class="text-center" style="background: url(&quot;assets/img/animationpromo1.png&quot;) no-repeat;background-size: cover;">
-                    <h2>Animation &amp; Rendering<br></h2>
-                    <p>3D renders, assets, and animations for customer engagement and entertainment.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="animation.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/animation.png" style="min-width: 250px;max-width: 70%;" width="40%">
+            <div style="padding-top: 30px;background: linear-gradient(white 1%, rgb(206,206,206));">
+                <div class="text-center">
+                    <h2>BCS Marketing<br></h2>
+                    <p>Privacy by-design flat-rate marketing for anyone.</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="page12.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/adad3.png" style="min-width: 250px;max-width: 70%;">
                 </div>
             </div><!-- End: Fruity -->
-            <!-- Start: Marketing -->
+            <!-- Start: more -->
             <div style="padding-top: 30px;">
                 <div class="text-center">
-                    <h2 style="color: rgb(255,255,255);">BCS Marketing</h2>
-                    <p style="color: rgb(255,255,255);">Privacy by-design flat-rate marketing for anyone.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="page12.html">learn more</a></p><img data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/adad3.png" style="min-width: 250px;max-width: 70%;">
-                </div>
-            </div><!-- End: Marketing -->
-            <!-- Start: more -->
-            <div style="background: linear-gradient(white 1%, rgb(206,206,206));padding-top: 30px;">
-                <div class="text-center">
-                    <h2>And so much more!</h2><!-- Start: 1 Row 3 Columns -->
+                    <h2 style="color: #fff;">And so much more!</h2><!-- Start: 1 Row 3 Columns -->
                     <div class="container" style="padding-bottom: 15px;">
                         <div class="row">
                             <div class="col-md-4"><img data-bss-hover-animate="pulse" src="assets/img/webdesign.png" width="100%">
-                                <h4>Web Products</h4>
+                                <h4 style="color: #fff;">Web Products</h4>
                                 <p class="text-white" style="margin-bottom: 0px;"><a href="webproducts.html">learn more</a></p>
                             </div>
                             <div class="col-md-4"><img data-bss-hover-animate="pulse" src="assets/img/business.png" width="100%">
-                                <h4>Business Products</h4>
+                                <h4 style="color: #fff;">Business Products</h4>
                                 <p class="text-white" style="margin-bottom: 0px;"><a href="services.html">learn more</a></p>
                             </div>
-                            <div class="col-md-4"><img data-bss-hover-animate="pulse" src="assets/img/thinking.png" width="100%">
-                                <h4>Software</h4>
+                            <div class="col-md-4"><img data-bss-hover-animate="pulse" src="assets/img/thinking.png" width="100%" style="color: #fff;">
+                                <h4 style="color: #fff;">Software</h4>
                                 <p class="text-white" style="margin-bottom: 0px;"><a href="softwareproducts.html">learn more</a></p>
                             </div>
                         </div>
