--- a/video.html
+++ b/video.html
@@ -58,7 +58,6 @@
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="webproducts.html">Web</a></li>
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="services.html">Business</a></li>
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="contact.html">Contact Us</a></li>
-                    <li class="nav-item" style="padding-right: 0px;"><a class="nav-link" href="http://shop.borgcreative.com/" target="_blank" style="padding-right: 16px;">merch</a></li>
                     <li class="nav-item" style="padding-right: 0px;"><a class="nav-link" href="https://cloud.borgcreative.com/" target="_blank">Login<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" style="width: 20px;height: 20px;">
                                 <path d="M16 7C16 9.20914 14.2091 11 12 11C9.79086 11 8 9.20914 8 7C8 4.79086 9.79086 3 12 3C14.2091 3 16 4.79086 16 7Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                                 <path d="M12 14C8.13401 14 5 17.134 5 21H19C19 17.134 15.866 14 12 14Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -81,7 +80,7 @@
                     <h2>Quality</h2>
                     <p>All of our content is original. Our vision is to produce high quality and family friendly content.<br></p>
                     <h2><strong>Production</strong></h2>
-                    <p>Our video department specializes in making short films and promotional content. We create our videos through Final Cut Pro, Adobe Premiere Pro, Final Draft 11, and Motion 5.</p><a class="btn btn-primary" role="button" style="background: #3d566e;border-style: none;" href="consultation.html">Request Consultation</a>
+                    <p>Our video department specializes in making short films and promotional content. We create our videos through Final Cut Pro, Adobe Premiere Pro, Final Draft 11, and Motion 5.</p>
                 </section><!-- End: Highlight Phone -->
             </div>
         </section>
