--- a/privacy.html
+++ b/privacy.html
@@ -77,7 +77,7 @@
                 <!-- Start: Highlight Phone -->
                 <section class="highlight-phone" style="background: #f6f6f6;padding: 0px 0px 5px;text-align: left;">
                     <h2></h2>
-                    <h1><strong>Privacy Policy for Borg Creative Studios, LLC</strong></h1>
+                    <h1><strong>Privacy Policy for Borg Creative Studios</strong></h1>
                     <h5>Effective Date: November 23, 2021</h5><!-- Start: Feed Post -->
                     <div class="card" style="margin: 10px;">
                         <div class="card-header">
