--- a/values.html
+++ b/values.html
@@ -76,20 +76,20 @@
                     <!-- Start: faith -->
                     <div><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/people2.png" style="width: 250px;">
                         <h1>Our Faith</h1>
-                        <p>We are a family owned and operated company, and we are Christian. We do not discriminate against people for their faith. We believe, in accordance with the Bible (Matthew 7:1-5), that discrimination and judgement of each other is wrong.</p>
+                        <p>We are a family owned and operated business, and we are Christian. We do not discriminate against people for their faith. We believe, in accordance with the Bible (Matthew 7:1-5), that discrimination and judgement of each other is wrong.</p>
                         <p>We do our best to conduct business in a manner that follows the Bible's commands and honors God. This means that we do our best to be honest, respectful, caring, and diligent in everything that we do.</p>
                     </div><!-- End: faith -->
                     <!-- Start: Politically unbiased -->
                     <div><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/newspaper.png" style="width: 250px;">
                         <h1>Politically Unbiased</h1>
-                        <p>We will not utilize our resources to share the political views of our staff. We as a company wish to remain impartial on the political stage.</p>
+                        <p>We will not utilize our resources to share the political views of our staff. We as a business wish to remain impartial on the political stage.</p>
                         <p>Advertisements may be political, but these ads do not reflect our political believes.&nbsp;</p>
                     </div><!-- End: Politically unbiased -->
                     <!-- Start: Privacy -->
                     <div><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 250px;">
                         <h1>Privacy</h1>
-                        <p>These days, most companies harvest user data and sell or share it with their business partners.&nbsp;</p>
-                        <p>This is wrong. These companies have no right to sell your data. Your data is yours, not ours. We will always respect your privacy.</p>
+                        <p>These days, most businesses harvest user data and sell or share it with their business partners.&nbsp;</p>
+                        <p>This is wrong. These businesses have no right to sell your data. Your data is yours, not ours. We will always respect your privacy.</p>
                     </div><!-- End: Privacy -->
                     <!-- Start: Customer care -->
                     <div><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/chat.png" style="width: 250px;">
@@ -106,7 +106,7 @@
                     </blockquote>
                     <figcaption class="blockquote-footer" style="color: rgb(255,255,255);">Genesis 1:26 (NIV)</figcaption>
                 </figure>
-                <p style="padding: 10px;color: #fff;">Borg Creative Studios is a Christian company. Because of this, we apply many Biblical standards to how we operate, and this includes being good stewards of the world that God created.</p><center>
+                <p style="padding: 10px;color: #fff;">Borg Creative Studios is a Christian business. Because of this, we apply many Biblical standards to how we operate, and this includes being good stewards of the world that God created.</p><center>
     <img src="https://api.thegreenwebfoundation.org/greencheckimage/www.borgcreative.com?nocache=true" alt="This website is hosted Green - checked by thegreenwebfoundation.org">
 
 </center>
