--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
     window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
     panelbear('config', { site: 'AZWIByPgAkY' });
 </script>
+
+<link rel="preload" href="https://dev.jacobborgprogramming.net/libraries/JazzBlocksFunctions.js" as="script">
+<script src="https://dev.jacobborgprogramming.net/libraries/JazzBlocksFunctions.js"></script>
 </head>
 
-<body>
+<body onload="disableselect(e)">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="padding-bottom: 15px;box-shadow: 0px -10px 20px;">
         <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
