--- a/bcs-card.html
+++ b/bcs-card.html
@@ -47,6 +47,9 @@
     window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
     panelbear('config', { site: 'AZWIByPgAkY' });
 </script>
+
+<link rel="preload" href="https://dev.jacobborgprogramming.net/libraries/JazzBlocksFunctions.js" as="script">
+<script src="https://dev.jacobborgprogramming.net/libraries/JazzBlocksFunctions.js"></script>
 </head>
 
 <body>
