--- a/emailsettings.html
+++ b/emailsettings.html
@@ -46,7 +46,10 @@
 <script>
     window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
     panelbear('config', { site: 'AZWIByPgAkY' });
-</script><meta name="robots" content="noindex" />
+</script>
+
+<link rel="preload" href="https://dev.jacobborgprogramming.net/libraries/JazzBlocksFunctions.js" as="script">
+<script src="https://dev.jacobborgprogramming.net/libraries/JazzBlocksFunctions.js"></script><meta name="robots" content="noindex" />
 </head>
 
 <body>
