--- a/webdesign.html
+++ b/webdesign.html
@@ -17,7 +17,6 @@
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -145,91 +144,7 @@
                     </div><!-- End: Projects -->
                 </div>
             </section><!-- End: Projects Clean -->
-            <!-- Start: Contact Form Clean -->
-            <section class="contact-clean" style="background: rgb(246,246,246);">
-                <!-- Start: Pricing Table Style 01 -->
-                <div class="row">
-                    <div class="col-sm-4 col-md-4">
-                        <div class="pricingTable purple">
-                            <div class="pricingTable-header">
-                                <h3>Creator</h3>
-                            </div>
-                            <div class="pricing-plans"><span class="month">Starting at</span><span class="price-value"><i class="fa fa-usd"></i><span>50</span></span></div>
-                            <div class="pricingContent">
-                                <ul>
-                                    <li>5 Static web pages</li>
-                                    <li>$10 BCS marketing credit</li>
-                                    <li>Contact form</li>
-                                    <li>$12 towards a Domain</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 col-md-4">
-                        <div class="pricingTable green">
-                            <div class="pricingTable-header">
-                                <h3>Business</h3>
-                            </div>
-                            <div class="pricing-plans"><span class="month">Starting at</span><span class="price-value"><i class="fa fa-usd"></i><span>200</span></span></div>
-                            <div class="pricingContent">
-                                <ul>
-                                    <li>25 Static Web Pages</li>
-                                    <li>$30 BCS Marketing Credit</li>
-                                    <li>Contact Form</li>
-                                    <li>Download center</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4 col-md-4">
-                        <div class="pricingTable yellow">
-                            <div class="pricingTable-header">
-                                <h3>Enterprise</h3>
-                            </div>
-                            <div class="pricing-plans"><span class="month">Contact sales</span><span class="price-value"></span></div>
-                            <div class="pricingContent">
-                                <ul>
-                                    <li>All the features of business</li>
-                                    <li>25+ pages</li>
-                                    <li>BCS card</li>
-                                    <li><a href="welcome.html">"Welcome"</a> program</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div><!-- End: Pricing Table Style 01 -->
-                <form data-bss-recipient="2904202ec7d643698622e477a6f86b2d" data-bss-subject="A new website consultation has been submitted" style="margin-top: 20px;">
-                    <h2 class="text-center">Let's get started!</h2>
-                    <p>Some package pricing varies. After your submit the below form, we will get an estimate to you as soon as possible!</p><!-- Start: Success Example -->
-                    <div class="mb-3"><input class="form-control" type="text" name="name" placeholder="Name"></div><!-- End: Success Example -->
-                    <!-- Start: Error Example -->
-                    <div class="mb-3"><input class="form-control is-invalid" type="email" name="email" placeholder="Email"><!-- Start: The Error Message --><small class="form-text text-danger">Please enter a correct email address.</small><!-- End: The Error Message -->
-                    </div><!-- End: Error Example --><label class="form-label">Package</label><select class="form-select" style="margin-bottom: 15px;">
-                        <optgroup label="Package">
-                            <option value="12" selected="">Creator</option>
-                            <option value="13">Business</option>
-                            <option value="14">Enterprise</option>
-                        </optgroup>
-                    </select><label class="form-label">Website Details</label>
-                    <div class="mb-3"><textarea class="form-control" name="message" placeholder="Website overview" rows="14" required=""></textarea></div><label class="form-label">Is there a website design that speaks to you? Drop a link to it below!</label><input class="form-control" type="url" placeholder="Inspiration" name="inspiration">
-                    <fieldset>
-                        <legend>On my site I need...</legend>
-                        <div class="form-check text-start"><input class="form-check-input" type="checkbox" id="formCheck-2"><label class="form-check-label" for="formCheck-2">Social sharing options</label></div>
-                        <div class="form-check text-start"><input class="form-check-input" type="checkbox" id="formCheck-2"><label class="form-check-label" for="formCheck-2">Comment sections</label></div>
-                        <div class="form-check text-start"><input class="form-check-input" type="checkbox" id="formCheck-3"><label class="form-check-label" for="formCheck-2">A search bar</label></div>
-                        <div class="form-check text-start"><input class="form-check-input" type="checkbox" id="formCheck-3"><label class="form-check-label" for="formCheck-2">A catalog</label></div>
-                        <div class="form-check text-start"><input class="form-check-input" type="checkbox" id="formCheck-4"><label class="form-check-label" for="formCheck-2">A map</label></div>
-                        <div class="form-check text-start"><input class="form-check-input" type="checkbox" id="formCheck-4"><label class="form-check-label" for="formCheck-2">Profile pages</label></div>
-                        <div class="form-check text-start"><input class="form-check-input" type="checkbox" id="formCheck-1"><label class="form-check-label" for="formCheck-1">A domain</label></div>
-                        <div class="form-check text-start"><input class="form-check-input" type="checkbox" id="formCheck-6"><label class="form-check-label" for="formCheck-1">Domain management</label></div>
-                        <div class="form-check text-start"><input class="form-check-input" type="checkbox" id="formCheck-6"><label class="form-check-label" for="formCheck-1">Chat</label></div>
-                    </fieldset>
-                    <legend>Just a little bit more is needed.</legend>
-                    <div class="form-check text-start"><input class="form-check-input" type="checkbox" id="formCheck-1" required=""><label class="form-check-label" for="formCheck-1">I understand that Borg Creative Studios will not build nor design a site that is intended for illegal activities or X-rated/NSFW content.</label></div>
-                    <div class="form-check text-start"><input class="form-check-input" type="checkbox" id="formCheck-5" required=""><label class="form-check-label" for="formCheck-1">I approve of Borg Creative Studios contacting me about my request and products.</label></div>
-                    <div class="mb-3"><button class="btn btn-primary" type="submit">send </button></div>
-                </form>
-            </section><!-- End: Contact Form Clean -->
+            <h1 style="margin-top: 15px;">Let's get your new website started!</h1><a class="btn btn-secondary btn-lg" role="button" style="margin-top: 15px;" href="https://cloud.borgcreative.com/my/index.php/apps/forms/QxdwnqqQ5p7L5FQZ" target="_blank">Contact Us</a>
         </section>
     </main>
     <section class="clean-block about-us" style="padding: 0px 0px 0px;">
@@ -273,7 +188,6 @@
         </footer><!-- End: Footer Clean -->
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/smart-forms.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="assets/js/script.min.js"></script>
