--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <body onload="disableselect(e)">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="padding-bottom: 15px;box-shadow: 0px -10px 20px;">
-        <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1" style="color: #3d566e;border-style: none;"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon" style="color: #3d566e;"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="softwareproducts.html">Software</a></li>
@@ -73,9 +73,9 @@
             <!-- Start: web design -->
             <div style="padding-top: 30px;">
                 <div class="text-center">
-                    <h2 class="text-white">BCS Cloud - Beta</h2>
-                    <p class="text-white">Privacy-friendly cloud services for you and your business</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="cloud.html">learn more</a></p><img src="assets/img/cloudpromo1.png" style="min-width: 250px;max-width: 70%;">
+                    <h2 class="text-white">Open Tea News</h2>
+                    <p class="text-white">Spilling the tea on the latest events</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="https://tea.borgcreative.com" target="_blank">learn more</a></p><img src="assets/img/opentea.png" style="min-width: 250px;max-width: 70%;">
                 </div>
             </div><!-- End: web design -->
             <!-- Start: Fruity -->
