--- a/cloud.html
+++ b/cloud.html
@@ -107,7 +107,7 @@
                         <p>Connect with your colleagues and get stuff done.</p>
                     </div>
                     <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 100%;">
-                        <h3>Analyze what amtters.</h3>
+                        <h3>Analyze what matters.</h3>
                         <p>Get privacy-oriented analytics for your websites.</p>
                     </div>
                 </div>
