--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <!-- Start: web design -->
             <div style="padding-top: 30px;">
                 <div class="text-center">
-                    <h2 class="text-white">Open Tea News</h2>
-                    <p class="text-white">Spilling the tea on the latest events</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="https://tea.borgcreative.com" target="_blank">learn more</a></p><img src="assets/img/opentea.png" style="min-width: 250px;max-width: 70%;">
+                    <h2 class="text-white">BCS Author</h2>
+                    <p class="text-white">A privacy-friendly writing app</p>
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="author.html">learn more</a></p><img src="assets/img/authorpromo.png" style="min-width: 250px;max-width: 70%;">
                 </div>
             </div><!-- End: web design -->
             <!-- Start: Fruity -->
